# OpenChess

./: CMakeLists.txt  ChessSDL.cpp  ChessSDL.h  README.md  main.cpp  minimax_changes.diff
.github/workflows/: cmake-multi-platform.yml
Board/: Board.cpp  Board.h
Config/: Config.cpp  Config.h
Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
build-wasm/: index.js  index.wasm
cmake/modules/: FindSDL2.cmake  FindSDL2_image.cmake
docs/: index.data  index.js  index.wasm
